--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,12 @@ services:
   - docker
 script:
   - docker run -v $PWD:/app phpqa/php-cs-fixer fix . --dry-run
+
+after_success:
+  - wget https://raw.githubusercontent.com/DiscordHooks/travis-ci-discord-webhook/master/send.sh
+  - chmod +x send.sh
+  - ./send.sh success $WEBHOOK_URL
+after_failure:
+  - wget https://raw.githubusercontent.com/DiscordHooks/travis-ci-discord-webhook/master/send.sh
+  - chmod +x send.sh
+  - ./send.sh failure $WEBHOOK_URL
