--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,10 @@ after_failure:
   - wget https://raw.githubusercontent.com/DiscordHooks/travis-ci-discord-webhook/master/send.sh
   - chmod +x send.sh
   - ./send.sh failure $WEBHOOK_URL
-notifications:
-  slack:
-    rooms:
-    - ipssi-d19-1:3U0tNTwfovSqXR04sBm4G5HQ#travis
-    on_success: change
-    on_failure: always
+#slack notifications : no need for now
+#notifications:
+  #slack:
+    #rooms:
+    #- ipssi-d19-1:3U0tNTwfovSqXR04sBm4G5HQ#travis
+    #on_success: change
+    #on_failure: always
