/POST User + Split Rest/Web

--- a/config/routes/annotations.yaml
+++ b/config/routes/annotations.yaml
@@ -1,4 +1,8 @@
 rest_controller:
-    resource: ../../src/Controller
+    resource: ../../src/Controller/Rest
     type: annotation
     prefix: /api
+
+web_controller:
+    resource: ../../src/Controller/Web
+    type: annotation
