--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "symfony/console": "4.2.*",
         "symfony/dotenv": "4.2.*",
         "symfony/flex": "^1.1",
+        "symfony/form": "4.2.*",
         "symfony/framework-bundle": "4.2.*",
         "symfony/http-foundation": "4.2.*",
         "symfony/orm-pack": "^1.0",
