--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services:
   - docker
 
 script:
-  - docker run -v /$PWD:/app phpqa/php-cs-fixer fix . --dry-run
+  - docker run -v /$PWD:/app phpqa/php-cs-fixer fix .
 
 after_failure:
   - wget https://raw.githubusercontent.com/DiscordHooks/travis-ci-discord-webhook/master/send.sh
