--- a/.env
+++ b/.env
@@ -24,5 +24,5 @@ APP_SECRET=3774a2622c6bfed1018b61063d8b31cd
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://ars:pass@localhost:3306/ars
+DATABASE_URL=mysql://ars:pass@192.168.99.100:3306/ars
 ###< doctrine/doctrine-bundle ###
