--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "symfony/framework-bundle": "4.2.*",
         "symfony/http-foundation": "4.2.*",
         "symfony/orm-pack": "^1.0",
+        "symfony/security-bundle": "4.2.*",
         "symfony/serializer": "4.2.*",
         "symfony/serializer-pack": "^1.0",
         "symfony/twig-bundle": "4.2.*",
@@ -66,6 +67,7 @@
         }
     },
     "require-dev": {
-        "symfony/maker-bundle": "^1.11"
+        "symfony/maker-bundle": "^1.11",
+        "symfony/profiler-pack": "^1.0"
     }
 }
