--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "symfony/serializer": "4.2.*",
         "symfony/serializer-pack": "^1.0",
         "symfony/twig-bundle": "4.2.*",
+        "symfony/validator": "4.2.*",
         "symfony/webpack-encore-bundle": "^1.1",
         "symfony/yaml": "4.2.*"
     },
