--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -37,3 +37,14 @@ services:
         image: 'redis:latest'
         ports:
             - '6379:6379'
+    node:
+        image: 'node:latest'
+        working_dir: /home/node/app
+        command:
+            - /bin/sh
+            - '-c'
+            - 'npm install'
+        ports:
+            - '3000:3000'
+        volumes:
+            - './:/home/node/app'
