--- a/config/routes/annotations.yaml
+++ b/config/routes/annotations.yaml
@@ -1,3 +1,7 @@
 admin_controller:
     resource: ../../src/Controller/Admin
     type: annotation
+
+controller:
+    resource: ../../src/Controller
+    type: annotation
