--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -18,10 +18,7 @@ security:
             security: false
         main:
             anonymous: ~
-
-            # activate different ways to authenticate
-
-            http_basic: true
+            # http_basic: true
             # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
             logout:
                 path:   app_logout
@@ -29,7 +26,7 @@ security:
                 authenticators:
                     - App\Security\SecurityControllerAuthenticator
 
-            # form_login: true
+            form_login: true
             # https://symfony.com/doc/current/security/form_login_setup.html
 
     # Easy way to control access for large sections of your site
