--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "doctrine/doctrine-fixtures-bundle": "^3.1",
         "easycorp/easyadmin-bundle": "^2.1",
         "friendsofsymfony/rest-bundle": "^2.5",
+        "kartik-v/bootstrap-star-rating": "@dev",
         "sensio/framework-extra-bundle": "^5.2",
         "symfony/console": "4.2.*",
         "symfony/dotenv": "4.2.*",
