tag color + icone

--- a/config/packages/admin/entities/tag.yaml
+++ b/config/packages/admin/entities/tag.yaml
@@ -5,3 +5,5 @@ easy_admin:
       form:
         fields:
         - {property: 'label'}
+        - {property: 'icone'}
+        - {property: 'color'}
