--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     },
     "dependencies": {
         "@ckeditor/ckeditor5-build-classic": "^12.1.0",
-        "jquery": "^3.3.1",
-        "jquery-colorbox": "^1.6.4",
+        "infinite-scroll": "^3.0.5",
+        "jquery": ">=3.4.0",
         "sass-loader": "^7.1.0"
     }
 }
