--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "doctrine/doctrine-fixtures-bundle": "^3.1",
         "easycorp/easyadmin-bundle": "^2.1",
         "friendsofsymfony/rest-bundle": "^2.5",
-        "kartik-v/bootstrap-star-rating": "@dev",
+        "jms/serializer-bundle": "^3.3",
         "knplabs/knp-paginator-bundle": "^3.0",
         "sensio/framework-extra-bundle": "^5.2",
         "symfony/console": "4.2.*",
