--- a/config/routes/annotations.yaml
+++ b/config/routes/annotations.yaml
@@ -1,3 +1,8 @@
-controller:
-    resource: ../../src/Controller
+web_controller:
+    resource: ../../src/Controller/
     type: annotation
+
+rest_controller:
+    resource: ../../src/Controller/Rest/
+    type: annotation
+    prefix: /api
