fix issue : travis conflict with discord

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,10 @@ services:
 script:
   - docker run -v /$PWD:/app phpqa/php-cs-fixer fix .
 
+after_success:
+  - wget https://raw.githubusercontent.com/DiscordHooks/travis-ci-discord-webhook/master/send.sh
+  - chmod +x send.sh
+  - ./send.sh success $WEBHOOK_URL
 after_failure:
   - wget https://raw.githubusercontent.com/DiscordHooks/travis-ci-discord-webhook/master/send.sh
   - chmod +x send.sh
