--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "infinite-scroll": "^3.0.6",
         "jquery": ">=3.4.0",
         "jquery-ui": "^1.12.1",
-        "sass-loader": "^7.1.0"
+        "sass-loader": "^7.1.0",
+        "swup": "^2.0.4"
     }
 }
